contact.css
.contactform{
    box-sizing: border-box;
    margin: 20px 10px 10px 10px;
    padding: 10px 10px 10px 10px;
    background-color:white;
    border-color: black;
}
.submitbutton{
    margin: 10px 10px 10px 10px;
    margin-bottom: 10px;
}
h1{
    color: darkcyan;
}

